Converted tests to java 11 and to be compatible with multiple game generation