@@ -1,23 +1,35 @@
 package thumbnail;
 
-import exception.FontNotFoundException;
-import exception.ThumbnailFromFileException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import thumbnail.generate.ThumbnailFromFile;
-import tournament.TournamentUtils;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.context.SpringBootTest;
+import thumbnailgenerator.Main;
+import thumbnailgenerator.dto.Game;
+import thumbnailgenerator.exception.FighterImageSettingsNotFoundException;
+import thumbnailgenerator.exception.FontNotFoundException;
+import thumbnailgenerator.exception.ThumbnailFromFileException;
+import thumbnailgenerator.service.ThumbnailService;
+import thumbnailgenerator.service.TournamentUtils;
 import utils.FileUtils;
 import utils.WaitUtils;
 
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertArrayEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+@SpringBootTest(classes = Main.class)
 public class MultiThumbnailGenerationTest {
+
+    @Autowired
+    private ThumbnailService thumbnailService;
 
     @BeforeEach
     public void init(){
@@ -27,10 +39,10 @@ public class MultiThumbnailGenerationTest {
     @Test
     public void create_validThumbnailFileRenders_success()
             throws ThumbnailFromFileException, FontNotFoundException,
-            IOException {
+            IOException, FighterImageSettingsNotFoundException {
         //Arrange
         File thumbnailListFile = new File(getClass().getResource("/input/multiThumbnailGeneration.txt").getPath());
-        List<File> expectedThumbnails = List.of(
+        List<File> expectedThumbnails = Arrays.asList(
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiThumbnail1.png"),
                 FileUtils.getFileFromResources(
@@ -38,14 +50,15 @@ public class MultiThumbnailGenerationTest {
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiThumbnail3.png")
         );
-        List<File> actualThumbnails = List.of(
+        List<File> actualThumbnails = Arrays.asList(
                 FileUtils.getActualFile("/generated_thumbnails/UrQte-robin11--Arjay-byleth28--Losers-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/fizbo-pikachu4--Darkout-pokemon_trainer15--winners Semis-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/Chime-rob2--Toaster-marth5--Grand Final-20_02_20XX.png")
         );
 
         //Act
-        ThumbnailFromFile.generateFromFile(thumbnailListFile, false);
+        InputStream fileInputsStream = new FileInputStream(thumbnailListFile);
+        thumbnailService.generateAndSaveThumbnailsFromFile(fileInputsStream, false);
 
         //Assert
         for (int i=0; i<3; i++) {
@@ -62,10 +75,10 @@ public class MultiThumbnailGenerationTest {
     @Test
     public void create_validThumbnailFileMural_success()
             throws ThumbnailFromFileException, FontNotFoundException,
-            IOException {
+            IOException, FighterImageSettingsNotFoundException {
         //Arrange
         File thumbnailListFile = new File(getClass().getResource("/input/multiMuralThumbnailGeneration.txt").getPath());
-        List<File> expectedThumbnails = List.of(
+        List<File> expectedThumbnails = Arrays.asList(
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiMuralThumbnail1.png"),
                 FileUtils.getFileFromResources(
@@ -73,14 +86,15 @@ public class MultiThumbnailGenerationTest {
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiMuralThumbnail3.png")
         );
-        List<File> actualThumbnails = List.of(
+        List<File> actualThumbnails = Arrays.asList(
                 FileUtils.getActualFile("/generated_thumbnails/UrQte-robin11--Arjay-byleth28--Losers-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/fizbo-pikachu1--Darkout-pokemon_trainer15--winners Semis-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/Chime-rob2--Toaster-marth5--Grand Final-20_02_20XX.png")
         );
 
         //Act
-        ThumbnailFromFile.generateFromFile(thumbnailListFile, false);
+        InputStream fileInputsStream = new FileInputStream(thumbnailListFile);
+        thumbnailService.generateAndSaveThumbnailsFromFile(fileInputsStream, false);
 
         //Assert
         for (int i=0; i<3; i++) {
@@ -97,10 +111,10 @@ public class MultiThumbnailGenerationTest {
     @Test
     public void create_validThumbnailFileRendersSaveLocally_success()
             throws ThumbnailFromFileException, FontNotFoundException,
-            IOException {
+            IOException, FighterImageSettingsNotFoundException {
         //Arrange
         File thumbnailListFile = new File(getClass().getResource("/input/multiThumbnailGeneration.txt").getPath());
-        List<File> expectedThumbnails = List.of(
+        List<File> expectedThumbnails = Arrays.asList(
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiThumbnail1.png"),
                 FileUtils.getFileFromResources(
@@ -108,22 +122,23 @@ public class MultiThumbnailGenerationTest {
                 FileUtils.getFileFromResources(
                         "/expected/thumbnail/multiThumbnail3.png")
         );
-        List<File> actualThumbnails = List.of(
+        List<File> actualThumbnails = Arrays.asList(
                 FileUtils.getActualFile("/generated_thumbnails/UrQte-robin11--Arjay-byleth28--Losers-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/fizbo-pikachu4--Darkout-pokemon_trainer15--winners Semis-20_02_20XX.png"),
                 FileUtils.getActualFile("/generated_thumbnails/Chime-rob2--Toaster-marth5--Grand Final-20_02_20XX.png")
         );
-        List<File> characterImages = List.of(
-                FileUtils.getCharacterImage("robin", 1),
-                FileUtils.getCharacterImage("byleth", 8),
-                FileUtils.getCharacterImage("pikachu", 4),
-                FileUtils.getCharacterImage("pokemon_trainer", 5),
-                FileUtils.getCharacterImage("rob", 2),
-                FileUtils.getCharacterImage("marth", 5)
+        List<File> characterImages = Arrays.asList(
+                FileUtils.getCharacterImage(Game.SSBU,"robin", 1),
+                FileUtils.getCharacterImage(Game.SSBU, "byleth", 8),
+                FileUtils.getCharacterImage(Game.SSBU, "pikachu", 4),
+                FileUtils.getCharacterImage(Game.SSBU, "pokemon_trainer", 5),
+                FileUtils.getCharacterImage(Game.SSBU, "rob", 2),
+                FileUtils.getCharacterImage(Game.SSBU, "marth", 5)
         );
 
         //Act
-        ThumbnailFromFile.generateFromFile(thumbnailListFile, true);
+        InputStream fileInputsStream = new FileInputStream(thumbnailListFile);
+        thumbnailService.generateAndSaveThumbnailsFromFile(fileInputsStream, true);
 
         //Assert
         for (int i=0; i<3; i++) {
